# src/routes/users.router.js
@@ -5,7 +5,7 @@ const userSchema = require('../validations/user.schema');
 const usersRouter = require('express').Router();
 
 usersRouter.get('/', userController.get)
-    .post('/',validationMiddleware(userSchema), userController.addUser)
+    .post('/sign_up',validationMiddleware(userSchema), userController.addUser)
     .post('/login', userController.login);
 
 module.exports = usersRouter;
